# NetLicensingClient-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: netlicensing-publish-pypi.yml  netlicensing-publish-testpypi.yml  netlicensing-python-ci.yml  netlicensing-python-dependency.yml  netlicensing-python-package.yml  netlicensing-python-test.yml
demo/: README.md  app.py
netlicensing/: __init__.py  netlicensing.py
script/: test
src/netlicensing/: __init__.py  client.py  config.py  exceptions.py
src/netlicensing/models/: __init__.py  base.py  entities.py  pagination.py  response.py
src/netlicensing/services/: __init__.py  base.py  bundle.py  helpers.py  license.py  license_template.py  licensee.py  notification.py  payment_method.py  product.py  product_module.py  token.py  transaction.py  utility.py  validation.py
tests/: conftest.py  test_about.py  test_client.py  test_internals.py  test_licensee.py  test_live_demo.py  test_models.py  test_services.py
tests/unit/: test_version.py
