[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netlicensing-client"
version = "0.1.0"
description = "Python client library for the Labs64 NetLicensing RESTful API"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Labs64 NetLicensing", email = "info@netlicensing.io" }]
keywords = [
  "netlicensing",
  "labs64",
  "licensing",
  "license-management",
  "rest-api",
  "client-library",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.25,<1",
  "pydantic>=2.5,<3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.8",
  "pytest>=8",
  "pytest-cov>=5",
  "twine>=5",
]

[project.urls]
Homepage = "https://netlicensing.io"
Documentation = "https://netlicensing.io/wiki/restful-api"
Source = "https://github.com/Labs64/NetLicensingClient-python"
Tracker = "https://github.com/Labs64/NetLicensingClient-python/issues"
Changelog = "https://github.com/Labs64/NetLicensingClient-python/releases"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-r fEsxXw -vv --cov=src/netlicensing --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: live tests against the NetLicensing demo service",
]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
packages = ["netlicensing"]
strict = true
warn_unused_ignores = true
warn_return_any = true
